# Quicklin

./: .gitignore  LANGUAGE_SPEC.md  LICENSE  README.md  install.py  pyproject.toml  setup.py
examples/: coroutines.qko  data_classes.qko  fibonacci.qko  hello_world.qko  null_safety.qko
quicklin/: __init__.py  __main__.py  cli.py  keywords.py  lexer.py  transpiler.py
tests/: test_transpiler.py
